<resources>
    <string name="app_name">Pokedex</string>
    <string name="uname">Username</string>
    <string name="pword">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name:</string>
    <string name="specie">Specie:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="ability">Ability:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
