<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pokemon_info_mainLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sharearide.research.jnapor.pokedex.PokemonInfoActivity">
    
    <RelativeLayout
        android:id="@+id/pokemon_image_parentlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/lairon"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pokemon_info_parentlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/pokemon_name"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/pokemon_name_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/pokemon_name_data"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pokemon_desc"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pokemon_name"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/pokemon_desc_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/specie"/>
            <TextView
                android:id="@+id/pokemon_desc_data"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pokemon_height"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pokemon_desc"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/pokemon_height_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/height"/>
            <TextView
                android:id="@+id/pokemon_height_data"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pokemon_weight"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pokemon_height"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/pokemon_weight_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>
            <TextView
                android:id="@+id/pokemon_weight_data"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pokemon_ability"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pokemon_weight"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/pokemon_ability_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/ability"/>
            <TextView
                android:id="@+id/pokemon_ability_data"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
